Exclude cache and settings files from project
Users will need to provide their own configuration files when compiling
the source code.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+
+# Output directories
+**/out
+
+# Visual Studio directories
+**/.vs
+
+# CMake settings
+CMakeSettings.json
