Add Game::XOBoard declaration
The Game::XOBoard class is an implementation of Game::Board designed for
playing an "m,n,k-game", where two players take turns and compete to be
the first place a number of their pieces on a m by n-sized board in a
horizontal, vertical or diagonal line of k length.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,3 @@
-﻿add_executable (sdl_xo_game "app.cpp")
+﻿add_executable (sdl_xo_game "app.cpp" "xo_board.cpp")
 
 target_include_directories (sdl_xo_game PUBLIC ${CMAKE_SOURCE_DIR}/include)
