Integrate doctest framework using CTest
This commit also removes empty lines from the CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-
 project ("sdl_xo_game")
-
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+	include (CTest)
+endif ()
+if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
+	add_subdirectory (tests)
+endif ()
 add_subdirectory (apps)
