Add XOBoard::full true expression test
XOBoard::full should return true when every cell of the board is
occupied.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,4 +1,4 @@
 find_package (doctest CONFIG REQUIRED)
-add_executable (xo_unit_tests "tests.cpp")
+add_executable (xo_unit_tests "tests.cpp" "xo_board.cpp")
 add_test (NAME unit_tests COMMAND xo_unit_tests)
 target_link_libraries (xo_unit_tests PRIVATE doctest::doctest)
