--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project ("sdl_xo_game")
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 	include (CTest)
 endif ()
+add_subdirectory (src)
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
 	add_subdirectory (tests)
 endif ()
