--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,2 +1,2 @@
-﻿add_executable (sdl_xo_game "app.cpp" "xo_board.cpp")
+﻿add_executable (sdl_xo_game "app.cpp")
 target_include_directories (sdl_xo_game PUBLIC ${CMAKE_SOURCE_DIR}/include)
