--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,4 +1,6 @@
 find_package (doctest CONFIG REQUIRED)
 add_executable (xo_unit_tests "tests.cpp" "xo_board.cpp")
+add_dependencies (xo_unit_tests xo_game_lib)
 add_test (NAME unit_tests COMMAND xo_unit_tests)
-target_link_libraries (xo_unit_tests PRIVATE doctest::doctest)
+target_link_libraries (xo_unit_tests PRIVATE doctest::doctest xo_game_lib)
+target_include_directories (xo_unit_tests PUBLIC ${CMAKE_SOURCE_DIR}/include)
