--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -1,5 +1,5 @@
 find_package (doctest CONFIG REQUIRED)
-add_executable (xo_unit_tests "tests.cpp" "sdl_xo_game/xo_board.cpp" "discriminate.cpp")
+add_executable (xo_unit_tests "tests.cpp" "sdl_xo_game/xo_board.cpp" "discriminate.cpp" "utils/iota.cpp")
 add_dependencies (xo_unit_tests xo_game_lib)
 add_test (NAME unit_tests COMMAND xo_unit_tests)
 target_link_libraries (xo_unit_tests PRIVATE doctest::doctest xo_game_lib)
